--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "1.0.5",
     "@prisma/client": "4.7.1",
+    "antd": "5.0.4",
+    "dayjs": "1.11.7",
     "next": "13.0.6",
     "next-auth": "4.18.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "eslint": "8.29.0",
