--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "1.0.5",
     "@prisma/client": "4.7.1",
     "antd": "5.0.4",
+    "antd-colorpicker": "1.0.0",
     "dayjs": "1.11.7",
     "next": "13.0.6",
     "next-auth": "4.18.3",
