--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "antd": "5.0.4",
     "antd-colorpicker": "1.0.0",
     "dayjs": "1.11.7",
+    "deep-equal": "2.1.0",
+    "is-hotkey": "0.2.0",
     "next": "13.0.6",
     "next-auth": "4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "slate": "0.87.0",
+    "slate-react": "0.87.1",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
