--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "1.11.7",
     "deep-equal": "2.2.0",
     "escape-html": "1.0.3",
+    "fs-extra": "11.1.0",
     "is-hotkey": "0.2.0",
     "next": "13.0.6",
     "next-auth": "4.18.3",
